# Homework

./: .gitignore  ex10.py  ex3.py  ex4.py  ex5.py  ex8.py  ex9.py
.github/workflows/: container-ninja.yml  hugo.yaml
Django-Ninja/mysite/: Dockerfile  db.sqlite3  pyproject.toml  requirements.txt
Django-Ninja/mysite/mysite/: api.py  urls.py
Django-Ninja/mysite/polls/: api.py  models.py  schema.py  tests.py
Django-Ninja/mysite/polls/templates/polls/: detail.html  index.html  results.html
Django/mysite/: db.sqlite3
Django/mysite/mysite/: settings.py
Django/mysite/polls/: admin.py  tests.py  urls.py  views.py
LPTHW/: ex1.py  ex11.py  ex14.py  ex15.py  ex16_sample.txt  ex18.py  ex25.py  ex30.py  ex31.py  ex33.py  ex6.py
LPTHW/ex1 - ex10/: ex7.py
LPTHW/ex11 - ex22/: ex13.py  ex17.py  ex19.py  ex20.py  ex22.txt
LPTHW/ex23 - ex33/: ex23.py  ex24.py  ex26.py
LPTHW/ex34 - ex44/: ex35.py  ex36.py  ex38.py  ex40.py  ex41.py  ex42.py  ex43.py  ex44a.py  ex44b.py  ex44c.py  ex44d.py  ex44e.py
LPTHW/ex45/: game.py  scene.py
LPTHW/projects/ex47/: setup.py
LPTHW/projects/gothonweb/: app.py
Pydantic/: Nested.py  ValidationTest.py
asp.net-core/EFCoreWithRazor/: EFCoreWithRazor.sln
asp.net-core/MvcMovie/: MvcMovie.sln
asp.net-core/RazorPagesMovie/: RazorPagesMovie.sln
blockchain/: Dockerfile  blockchain.py
blockchain/kubernetes/: deployment.yaml  service.yaml
hugo/: Dockerfile  config.toml
hugo/kubernetes/: deployment.yaml  service.yaml
litestar/mysite/: Dockerfile  app.py  models.py  repositories.py  requirements.txt
(+60 files in other folders)
