[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Jin C. <jin@virsyne.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"
django-ninja = "^0.22.2"
django-debug-toolbar = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
